# cli

./: .prettierignore  .prettierrc  CHANGELOG.md  Cargo.toml  README.md  autoi18n.json  cli.api.i18nhero.spec.json  dist-workspace.toml  i18nhero.json  justfile  mdsf.json  web.api.i18nhero.spec.json
.github/: dependabot.yml
.github/workflows/: release-cargo.yml  release.yml
schemas/v0.0.0/: i18nhero.schema.json
schemas/v0.0.1/: i18nhero.schema.json
schemas/v0.0.1-dev/: i18nhero.schema.json
schemas/v0.0.2/: i18nhero.schema.json
schemas/v0.0.2-dev/: i18nhero.schema.json
schemas/v0.0.3/: i18nhero.schema.json
schemas/v0.0.3-dev/: i18nhero.schema.json
scripts/: update-readme-help.py
