[workspace]
members = ["packages/i18nhero", "packages/i18nhero-codegen"]
resolver = "2"

[workspace.package]
version = "0.0.3"
authors = ["Mads Hougesen <mads@mhouge.dk>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/i18nhero/cli"
documentation = "https://github.com/i18nhero/cli#readme"
keywords = [
  "i18n",
  "internationalization",
  "l10n",
  "localization",
  "translation",
]
description = "CLI tool for interacting with locales hosted on i18nhero.com"
homepage = "https://i18nhero.com"
readme = "README.md"
categories = [
  "command-line-utilities",
  "development-tools",
  "internationalization",
  "localization",
  "web-programming",
]

[workspace.dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.35", features = ["derive"] }
clap_complete = "4.5.50"
clap_complete_nushell = "4.5.5"
console = { version = "0.15.11" }
dialoguer = { version = "0.11.0" }
dirs = { version = "5.0.1" }
git2 = { version = "0.19.0", default-features = false, features = [
  "vendored-libgit2",
] }
i18nhero = { path = "packages/i18nhero", version = "0.0.3" }
json_comments = "0.2.2"
path-absolutize = { version = "3.1.1", features = ["once_cell_cache"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [
  "brotli",
  "charset",
  "cookies",
  "deflate",
  "gzip",
  "http2",
  "json",
  "macos-system-configuration",
  "rustls-tls",
  "zstd",
] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
supports-hyperlinks = "3.1.0"
tempfile = "3.19.1"
terminal-link = "0.1.0"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
